--- a/404.html
+++ b/404.html
@@ -11,13 +11,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/assets/css/0.styles.51ec4092.css" as="style"><link rel="preload" href="/assets/js/app.6488ec3f.js" as="script"><link rel="preload" href="/assets/js/9.f2b4c665.js" as="script"><link rel="prefetch" href="/assets/js/10.9f987c65.js"><link rel="prefetch" href="/assets/js/11.c9eba9d3.js"><link rel="prefetch" href="/assets/js/12.9847ad37.js"><link rel="prefetch" href="/assets/js/13.a8774ce5.js"><link rel="prefetch" href="/assets/js/14.9248ac32.js"><link rel="prefetch" href="/assets/js/15.99f1371a.js"><link rel="prefetch" href="/assets/js/2.2ca22485.js"><link rel="prefetch" href="/assets/js/3.2f0ee767.js"><link rel="prefetch" href="/assets/js/4.3eb461a4.js"><link rel="prefetch" href="/assets/js/5.434ca876.js"><link rel="prefetch" href="/assets/js/6.e6d9dd10.js"><link rel="prefetch" href="/assets/js/7.60fd6dff.js"><link rel="prefetch" href="/assets/js/8.ca416b25.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.51ec4092.css">
+    <link rel="preload" href="/vuepress-demo/assets/css/0.styles.2ace3168.css" as="style"><link rel="preload" href="/vuepress-demo/assets/js/app.b5cc2028.js" as="script"><link rel="preload" href="/vuepress-demo/assets/js/9.f2b4c665.js" as="script"><link rel="prefetch" href="/vuepress-demo/assets/js/10.9f987c65.js"><link rel="prefetch" href="/vuepress-demo/assets/js/11.c9eba9d3.js"><link rel="prefetch" href="/vuepress-demo/assets/js/12.89f54d65.js"><link rel="prefetch" href="/vuepress-demo/assets/js/13.90aeadc4.js"><link rel="prefetch" href="/vuepress-demo/assets/js/14.9248ac32.js"><link rel="prefetch" href="/vuepress-demo/assets/js/15.ec44978f.js"><link rel="prefetch" href="/vuepress-demo/assets/js/2.2ca22485.js"><link rel="prefetch" href="/vuepress-demo/assets/js/3.2f0ee767.js"><link rel="prefetch" href="/vuepress-demo/assets/js/4.3eb461a4.js"><link rel="prefetch" href="/vuepress-demo/assets/js/5.434ca876.js"><link rel="prefetch" href="/vuepress-demo/assets/js/6.e6d9dd10.js"><link rel="prefetch" href="/vuepress-demo/assets/js/7.60fd6dff.js"><link rel="prefetch" href="/vuepress-demo/assets/js/8.ca416b25.js">
+    <link rel="stylesheet" href="/vuepress-demo/assets/css/0.styles.2ace3168.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vuepress-demo/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.6488ec3f.js" defer></script><script src="/assets/js/9.f2b4c665.js" defer></script>
+    <script src="/vuepress-demo/assets/js/app.b5cc2028.js" defer></script><script src="/vuepress-demo/assets/js/9.f2b4c665.js" defer></script>
   </body>
 </html>
