--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/assets/css/0.styles.51ec4092.css" as="style"><link rel="preload" href="/assets/js/app.6488ec3f.js" as="script"><link rel="preload" href="/assets/js/2.2ca22485.js" as="script"><link rel="preload" href="/assets/js/10.9f987c65.js" as="script"><link rel="prefetch" href="/assets/js/11.c9eba9d3.js"><link rel="prefetch" href="/assets/js/12.9847ad37.js"><link rel="prefetch" href="/assets/js/13.a8774ce5.js"><link rel="prefetch" href="/assets/js/14.9248ac32.js"><link rel="prefetch" href="/assets/js/15.99f1371a.js"><link rel="prefetch" href="/assets/js/3.2f0ee767.js"><link rel="prefetch" href="/assets/js/4.3eb461a4.js"><link rel="prefetch" href="/assets/js/5.434ca876.js"><link rel="prefetch" href="/assets/js/6.e6d9dd10.js"><link rel="prefetch" href="/assets/js/7.60fd6dff.js"><link rel="prefetch" href="/assets/js/8.ca416b25.js"><link rel="prefetch" href="/assets/js/9.f2b4c665.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.51ec4092.css">
+    <link rel="preload" href="/vuepress-demo/assets/css/0.styles.2ace3168.css" as="style"><link rel="preload" href="/vuepress-demo/assets/js/app.b5cc2028.js" as="script"><link rel="preload" href="/vuepress-demo/assets/js/2.2ca22485.js" as="script"><link rel="preload" href="/vuepress-demo/assets/js/10.9f987c65.js" as="script"><link rel="prefetch" href="/vuepress-demo/assets/js/11.c9eba9d3.js"><link rel="prefetch" href="/vuepress-demo/assets/js/12.89f54d65.js"><link rel="prefetch" href="/vuepress-demo/assets/js/13.90aeadc4.js"><link rel="prefetch" href="/vuepress-demo/assets/js/14.9248ac32.js"><link rel="prefetch" href="/vuepress-demo/assets/js/15.ec44978f.js"><link rel="prefetch" href="/vuepress-demo/assets/js/3.2f0ee767.js"><link rel="prefetch" href="/vuepress-demo/assets/js/4.3eb461a4.js"><link rel="prefetch" href="/vuepress-demo/assets/js/5.434ca876.js"><link rel="prefetch" href="/vuepress-demo/assets/js/6.e6d9dd10.js"><link rel="prefetch" href="/vuepress-demo/assets/js/7.60fd6dff.js"><link rel="prefetch" href="/vuepress-demo/assets/js/8.ca416b25.js"><link rel="prefetch" href="/vuepress-demo/assets/js/9.f2b4c665.js">
+    <link rel="stylesheet" href="/vuepress-demo/assets/css/0.styles.2ace3168.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" aria-current="page" class="home-link router-link-exact-active router-link-active"><!----> <span class="site-name">Vuepress Demo</span></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/page-1/" class="nav-link">
+    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/vuepress-demo/" aria-current="page" class="home-link router-link-exact-active router-link-active"><!----> <span class="site-name">Vuepress Demo</span></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/vuepress-demo/page-1/" class="nav-link">
   Page 1
-</a></div><div class="nav-item"><a href="/page-2/" class="nav-link">
+</a></div><div class="nav-item"><a href="/vuepress-demo/page-2/" class="nav-link">
   Page 2
-</a></div><div class="nav-item"><a href="/page-3/" class="nav-link">
+</a></div><div class="nav-item"><a href="/vuepress-demo/page-3/" class="nav-link">
   Page 3
 </a></div><div class="nav-item"><a href="https://instagram.com/baumannzone" target="_blank" rel="noopener noreferrer" class="nav-link external">
   Instagram
   <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></div> <a href="https://github.com/baumannzone/vuepress-demo" target="_blank" rel="noopener noreferrer" class="repo-link">
     GitHub
-    <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/page-1/" class="nav-link">
+    <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/vuepress-demo/page-1/" class="nav-link">
   Page 1
-</a></div><div class="nav-item"><a href="/page-2/" class="nav-link">
+</a></div><div class="nav-item"><a href="/vuepress-demo/page-2/" class="nav-link">
   Page 2
-</a></div><div class="nav-item"><a href="/page-3/" class="nav-link">
+</a></div><div class="nav-item"><a href="/vuepress-demo/page-3/" class="nav-link">
   Page 3
 </a></div><div class="nav-item"><a href="https://instagram.com/baumannzone" target="_blank" rel="noopener noreferrer" class="nav-link external">
   Instagram
@@ -39,11 +39,11 @@
       Vuepress Demo
     </h1> <p class="description">
       Docs the right way
-    </p> <p class="action"><a href="/page-1/" class="nav-link action-button">
+    </p> <p class="action"><a href="/vuepress-demo/page-1/" class="nav-link action-button">
   Quick Start →
 </a></p></header> <div class="features"><div class="feature"><h2>Feature 1 Title</h2> <p>Feature 1 Description</p></div><div class="feature"><h2>Feature 2 Title</h2> <p>Feature 2 Description</p></div><div class="feature"><h2>Feature 3 Title</h2> <p>Feature 3 Description</p></div></div> <div class="theme-default-content custom content__default"></div> <div class="footer">
     Made by Baumannzone with ❤️
   </div></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.6488ec3f.js" defer></script><script src="/assets/js/2.2ca22485.js" defer></script><script src="/assets/js/10.9f987c65.js" defer></script>
+    <script src="/vuepress-demo/assets/js/app.b5cc2028.js" defer></script><script src="/vuepress-demo/assets/js/2.2ca22485.js" defer></script><script src="/vuepress-demo/assets/js/10.9f987c65.js" defer></script>
   </body>
 </html>
