--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/vuepress-demo/assets/css/0.styles.36b36714.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/vuepress-demo/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-demo/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"><!----></div></div>
     <script src="/vuepress-demo/assets/js/app.38ca07ff.js" defer></script><script src="/vuepress-demo/assets/js/9.17cfe042.js" defer></script>
